Se agrega un parrafo en el index.html v2

--- a/proyecto.html
+++ b/proyecto.html
@@ -10,6 +10,6 @@
     <header>
         
     </header>
-    <p>Esto es un parrafo</p>
+    <p>Esto es un parrafo en este lugar</p>
 </body>
 </html>
